--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage": "http://MahmoudAlGohry.github.io/bagyProject",
   "name": "bagybags",
   "private": true,
   "version": "0.0.0",
